// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionRow rendering 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 0,
        "borderColor": "#ededed",
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
      },
      Object {
        "backgroundColor": "#cecece7d",
      },
      false,
    ]
  }
>
  <Text
    style={
      Object {
        "marginTop": -7,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="file-document-outline"
      size={30}
      style={
        Object {
          "marginRight": 10,
        }
      }
      title="Bills"
    />
    counterparty test
  </Text>
  <Text>
    1.23
     
    currency test
  </Text>
</View>
`;

exports[`TransactionRow rendering last row 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomWidth": 0,
        "borderColor": "#ededed",
        "borderWidth": 0.5,
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingHorizontal": 15,
        "paddingVertical": 15,
      },
      Object {
        "backgroundColor": "#cecece7d",
      },
      Object {
        "borderBottomWidth": 0.5,
      },
    ]
  }
>
  <Text
    style={
      Object {
        "marginTop": -7,
      }
    }
  >
    <Icon
      allowFontScaling={false}
      name="gift"
      size={30}
      style={
        Object {
          "marginRight": 10,
        }
      }
      title="Gifts"
    />
    counterparty test
  </Text>
  <Text>
    1.23
     
    currency test
  </Text>
</View>
`;
